Help update from sofia
Signed-off-by: Kevin Wasserman <kevin.wasserman@painless-security.com>

--- a/src/windows/leash/htmlhelp/html/Encryption_Types.htm
+++ b/src/windows/leash/htmlhelp/html/Encryption_Types.htm
@@ -57,14 +57,14 @@ encryption when connecting to the older machines.</p>
 <li>Click the Encryption Type checkbox to select it. This opens the
 Encryption Type column in the main window, showing the encryption type
 associated with each of your tickets and session keys. <br>
-<a href="HTML/Options_Tab.htm#using-ticket-options">Using the View Panel</a></li>
+<a href="HTML/Options_Tab.htm#using-ticket-options">How to: Use Ticket Options  Panel</a></li>
 <li>Click and drag the line to the right of the Encryption Type column
 header to widen the column enough to see both the ticket and session
 key.</li>
 <li> Click the blue triangle to the left of a principal name to see all
 tickets and session keys issued to that principal. Each ticket and key
 will have an entry in the Encryption type column. <br>
-<a href="HTML/View_Tickets.htm">View tickets help</a>
+<a href="HTML/View_Tickets.htm">How to: View Tickets </a>
 </li></ol>
 
 
