--- a/src/windows/leash/htmlhelp/html/Get_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Get_Tickets.htm
@@ -6,7 +6,10 @@
 <Title>Get Tickets</Title>
 </HEAD>
 <BODY>
-<H1>Get Tickets</H1>
+
+ <H1>Get Tickets</H1> 
+
+
 <p>
 Before you can access services that use Kerberos for authentication, you must obtain a Kerberos ticket. If your company uses RSA SecurID to control access to Kerberos, you will be prompted to enter your SecurID password after you request a ticket.</p>
 <p>
@@ -26,7 +29,7 @@ To get a ticket:
 <li><b>To get a forwardable ticket</b>, select  the Forwardable and Proxiable checkbox.</li>
 <li><b>To get a renewable ticket</b>, select  the Renewable checkbox.</li>
 </ul>
- For more information, go to <a href="HTML/Ticket_Settings.htm">Ticket settings help</a>. 
+<a href="HTML/Ticket_Settings.htm">About: Ticket Settings and Flags</a>
 
 
 <li>Click <font id="button"> Okay</font>.
@@ -42,7 +45,7 @@ Your new ticket is listed in the main window.
 <ul id="helpul">
 <li><a href="HTML/Tickets.htm">About tickets</a></li>
 <li><a href="HTML/Ticket_Settings.htm">Ticket settings and flags</a></li>
-<li><a href="HTML/Import_Tickets.htm">Import tickets</a></li>
+
 </ul>
 <SCRIPT Language=JavaScript> 
 popfont="Arial,.725," 
