--- a/src/windows/leash/htmlhelp/html/Import_Status.htm
+++ b/src/windows/leash/htmlhelp/html/Import_Status.htm
@@ -16,7 +16,8 @@ whether they have been imported or exported to the other application. </p>
 To show or hide this column, open the Options tab and use the Import
 Status checkbox in the View Options panel. Note that Import Status is
 only available if you have obtained tickets through a Windows Logon
-session. <a href="HTML/Options_Tab.htm#using-view-options">Using the View Options panel </a></p>
+session. <br> 
+<a href="HTML/Options_Tab.htm#using-view-options">How to: Use View Options Panel </a></p>
 
 <table>
 <tbody><tr><th> Import Status </th>
@@ -35,8 +36,8 @@ They have been imported into MIT Kerberos. </td>
 They have not been imported into MIT Kerberos because Automatic Import
 has been turned off. To import them, select Automatic Import in the
 Ticket Options panel of the Options tab, or click the Import button in the Home tab.<br>
- <a href="HTML/Options_Tab.htm#using-ticket-options">Using the Ticket Options panel </a><br>
-<a href="HTML/Import_Tickets.htm">Using the Import Ticket button</a></li></td>
+ <a href="HTML/Options_Tab.htm#using-ticket-options">How to: Use Ticket Options Panel</a><br>
+<a href="HTML/Import_Tickets.htm">How to: Import Tickets</a></li></td>
 </tr><tr>
 <th id="th2">protected</th> 
 <td>The tickets were obtained when you started a Windows Logon session  by logging in to a domain.
