--- a/src/windows/leash/htmlhelp/html/Import_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Import_Tickets.htm
@@ -45,7 +45,8 @@ possible. </p>
 In most installations, MIT Kerberos will automatically import tickets
 if possible. Go to the Options tab and click the Automatic Import
 Tickets checkbox in the Ticket Options panel to turn the feature on or
-off. <a href="HTML/Options_Tab.htm#using-ticket-options">Using the Ticket Options Panel </a>
+off. <br> 
+<a href="HTML/Options_Tab.htm#using-ticket-options">How to: Use Ticket Options Panel </a>
 </p><p>
 In some cases MIT Kerberos tries to automatically import tickets but is
 prevented from doing so by the Windows User Access Control (UAC)
