--- a/src/windows/leash/htmlhelp/html/Manage_Multiple_Principals.htm
+++ b/src/windows/leash/htmlhelp/html/Manage_Multiple_Principals.htm
@@ -53,7 +53,7 @@ When you get tickets for a principal for the first time, enter the principal in 
 <tr>
 <th id="th2">Select principal before using buttons</th>
 <td>
-Select a principal in the main window by clicking it. The selected principal will now be affected by the buttons in the Home tab (e.g., Change Password, Export). Note that you can select multiple principals before you click the Renew Tickets button. 
+Select a principal in the main window by clicking it. The selected principal will now be affected by the buttons in the Home tab (e.g., Change Password). Note that you can select multiple principals before you click the Renew Tickets button. 
 
 </td></tr>
 <tr>
@@ -64,11 +64,12 @@ If the Automatic Ticket Renewal option is selected, all renewable tickets for al
 <tr>
 <th id="th2">Choose default principal</th>
 <td>
-To choose which principal's tickets are used by default when you access a Kerberized service, select a principal in the main window by clicking it and then click the Make Default button. <a href="HTML/Make_Default.htm">Click for details</a></td>
+To choose which principal's tickets are used by default when you access a Kerberized service, select a principal in the main window by clicking it and then click the Make Default button. <br> <a href="HTML/Make_Default.htm">How to: Make Default Principal</a></td>
 </tr>
 <th id="th2">Clear saved principals</th>
 <td>
-If you have saved a principal that you will no longer use, and you do not want that principal to auto-complete or show in the saved principal list in the Get Ticket and Change Password windows, you can clear your principal history by clicking the Clear History button in the  Get Ticket window.  Note that MIT Kerberos will immediately clear <em>all</em> of your saved principals.  <a href="HTML/Forget_Principals.htm">Click for details</a></td></tr>
+If you have saved a principal that you will no longer use, and you do not want that principal to auto-complete or show in the saved principal list in the Get Ticket and Change Password windows, you can clear your principal history by clicking the Clear History button in the  Get Ticket window.  Note that MIT Kerberos will immediately clear <em>all</em> of your saved principals.  <br> 
+<a href="HTML/Forget_Principals.htm">How to: Clear Principal History</a></td></tr>
 </table>
 
 
