--- a/src/windows/leash/htmlhelp/html/Principals.htm
+++ b/src/windows/leash/htmlhelp/html/Principals.htm
@@ -27,7 +27,8 @@ If like many users you just have one Kerberos identity, you will have just one p
 </p><p>
 In most installations, MIT Kerberos knows your realm, so when you start to enter your principal in the Get Ticket window it will auto-complete for you. If you select the "Remember this principal" checkbox you won't have to enter your principal again. </p>
 <p>
-The main window shows your principal, along with information about tickets issued to it.   <a href="HTML/View_Tickets.htm"> View Tickets help</a>
+The main window shows your principal, along with information about tickets issued to it. <br>
+   <a href="HTML/View_Tickets.htm"> How to: View Tickets </a>
 </p>
 <p>
 <a href=#top>Back to top</a></p>
@@ -35,9 +36,8 @@ The main window shows your principal, along with information about tickets issue
 <H2><a name="manage-multiple">Multiple principals</a></H2>
 <p>
 Some users have multiple principals. For example, administrators often have one principal with standard access and an administrative principal with administrative access. Also, some Kerberos installations require multiple principals to access multiple realms.
-</p>
-<p>
-If you have multiple principals, you might want to read the help pages <a href="HTML/Manage_Multiple_Principals.htm"> Manage multiple principals</a> and <a href="HTML/Make_Default.htm">Make  default principal</a>.
+<br>
+ <a href="HTML/Manage_Multiple_Principals.htm">How to:  Manage Multiple Principals</a> <br> <a href="HTML/Make_Default.htm">How to: Make  Default Principal</a>.
 </p>
 <p>
 <a href=#top>Back to top</a></p>
@@ -51,7 +51,8 @@ When you try to use a Kerberized application, the application attempts to authen
 When applications make a generic request, Kerberos does not know which of your principals is being authenticated and checks the default principal for tickets. If the default principal is not the correct one, the application will usually simply fail to work with no warning or notice. 
 </p>
 <p>
-To set your default principal, select a principal in the main window and then click the Make Default button. <a href="HTML/Make_Default.htm">Make Default Principal help</a>
+To set your default principal, select a principal in the main window and then click the Make Default button.<br>
+ <a href="HTML/Make_Default.htm">How to: Make Default Principal </a>
 </p>
 <p>
 <a href=#top>Back to top</a></p>
