--- a/src/windows/leash/htmlhelp/html/Renew_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Renew_Tickets.htm
@@ -70,10 +70,10 @@ tickets will not be renewed and will expire instead. </p>
 <p>
 You can renew a ticket if the following conditions are met:</p>
 <ul>
-<li> When you obtained the ticket, the Renewable flag was selected. <a href="HTML/Ticket_Settings.htm">Ticket Settings and Flags help</a></li>
+<li> When you obtained the ticket, the Renewable flag was selected. <br> <a href="HTML/Ticket_Settings.htm">About: Ticket Settings and Flags </a></li>
 <li> The "Renewable Until" deadline has not been reached. Show or hide
 the Renewable Until column with the View Options panel in the Options
-tab. <a href="Options_Tab.htm#using-view-options">Using the View Options Panel</a></li>
+tab. <br> <a href="Options_Tab.htm#using-view-options">How to: Use View Options Panel</a></li>
 <li> The ticket has not already expired. </li>
 <li>MIT Kerberos is running and your computer is not in hibernation mode.</li>
 </ul>
