--- a/src/windows/leash/htmlhelp/html/Ticket_Settings.htm
+++ b/src/windows/leash/htmlhelp/html/Ticket_Settings.htm
@@ -54,7 +54,8 @@ To  adjust settings for a new ticket:</p>
 You can view settings and flags for existing tickets in the main
 window. If the information you want is not visible, go to the Options
 tab and use the checkboxes in the View Options panel to open the
-relevant column. <a href="HTML/View_Tickets.htm">View Tickets help</a></p>
+relevant column. <br> 
+<a href="HTML/View_Tickets.htm">How to: View Tickets </a></p>
 
 <table>
 <tbody><tr>
@@ -91,7 +92,8 @@ Your Kerberos ticket will expire at the end of the lifetime specified
 with this slider control. Longer lifetimes are more convenient but less
 secure. To get a longer usable ticket lifetime without losing security,
 flag the ticket as renewable and then in the main window select the
-Automatic Ticket Renewal option. <a href="HTML/Tickets.htm#renewable">About renewable tickets</a>
+Automatic Ticket Renewal option. <br> 
+<a href="HTML/Tickets.htm#renewable">About: Renewable Tickets</a>
 </td>
 </tr>
 </tbody></table>
@@ -155,7 +157,7 @@ You do not need to enter your password to renew tickets. <p></p>
 If you let your ticket expire, you cannot renew it even if the ticket
 is still within the renewable lifetime. For convenience, you can set
 your tickets to automatically renew.<br>
-<a href="HTML/Tickets.htm#renewable">About renewable tickets</a>
+<a href="HTML/Tickets.htm#renewable">About: Renewable Tickets</a>
 </td>
 </tr>
 </tbody></table>
