--- a/src/windows/leash/htmlhelp/html/Change_Password.htm
+++ b/src/windows/leash/htmlhelp/html/Change_Password.htm
@@ -13,7 +13,7 @@
 To change your password:</p>
 <ol>
 <li> Create or choose a strong new password. It's best to start with a phrase instead of a word. <br>
- <a href="HTML/Password_Tips.htm">Password tips and examples</a></li>
+ <a href="HTML/Password_Tips.htm">About: Password Tips and Examples</a></li>
 
 <li>If you have multiple <a href="JavaScript:popup.TextPopup(popupPrincipal, popfont,9,9,-1,-1)">principals</a>, you can select the principal you want to manage by clicking it in the main window. Or you can wait to choose your principal in the Change Password window. </li>
 
@@ -28,18 +28,14 @@ To change your password:</p>
 <li>Click Okay.</li>
 
 </ol>
-<p>
-Remember to use your new password the next time you obtain tickets.</p>
-<p>
-<b> If  you change the password for a principal with imported tickets,</b>  you must use your new password when you use that principal to log on to your Windows domain with a Windows Logon session. <a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a>
-</p>
+
 
 <H2>Related Help</H2>
 <ul id="helpul">
 <li><a href="HTML/Passwords.htm">About passwords</a></li>
 <li><a href="HTML/Password_Tips.htm">Password tips and examples</a></li>
 <li><a href="HTML/Forget_Password.htm">If you forget your password</a></li>
-<li><a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a></li>
+
 
 </ul>
 
