--- a/src/windows/leash/htmlhelp/html/Destroy_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Destroy_Tickets.htm
@@ -16,21 +16,16 @@ anyone. </p>
 <th id="th2">How to...</th>
 <td>
 <ul id="helpul">
-<li><a href="#destroy-once"> Destroy tickets
-obtained with the Get Ticket window</a></li>
-<li><a href="#imported"> Destroy tickets
-obtained with a Windows Logon session</a></li>
+<li><a href="#destroy-once"> Destroy tickets immediately</li>
 <li><a href="#destroy-automatically">
-Destroy tickets automatically</a></li>
+Destroy tickets automatically on exit</a></li>
 </ul>
 </td>
 </tr>
 </tbody>
 </table>
-<h2><a name="destroy-once">Destroy obtained with the
-Get Ticket window</a></h2>
-<p>To immediately destroy all of the tickets obtained with the
-Get Ticket window:</p>
+<h2><a name="destroy-once">Destroy tickets immediately</a></h2>
+<p>To immediately destroy all of your MIT Kerberos tickets:</p>
 <ol>
 <li>Click the Destroy Ticket button in the Home tab or use the <a href="JavaScript:popup.TextPopup(popupKeyboardShortcut, popfont,9,9,-1,-1)">keyboard
 shortcut</a> [Ctrl + d].</li>
@@ -38,68 +33,27 @@ shortcut</a> [Ctrl + d].</li>
 </li>
 </ol>
 <p>
-<b>Note: </b> If you have tickets with an Import Status of
-<em>imported</em>, <em>importable</em>, or <em>protected</em>,
-see the next help section: <a href="#imported">Destroy
-tickets obtained with a Windows Logon session </a></p>
-<p>
+
 <a href="#top">Back to Top</a> </p>
-<h2><a name="imported">Destroy tickets obtained with
-a Windows Logon session</a></h2>
-<p>
-MIT Kerberos displays all of your tickets, including those obtained
-when you logged on to a Windows domain with a Windows Logon session.
-Tickets obtained with a Windows Logon session show an Import Status of <em>imported</em>,
-<em>importable</em>, or <em>protected.</em><br>
-<a href="HTML/Tickets.htm#importable">About importable
-(Windows domain) tickets</a>
-</p>
-<h3>Destroy imported tickets</h3>
-<p>
-Imported tickets cannot be destroyed in MIT Kerberos if the Automatic
-Import option is selected, because Kerberos would immediately re-import
-the destroyed ticket. However, they are automatically destroyed when
-you exit your Windows Logon session. </p>
-<p>If you do want to immediately destroy only the imported copy:</p>
-<ol>
-<li>Open the Options tab.</li>
-<li>Deselect the Automatic Import Tickets checkbox in the
-Ticket Options panel. <a href="HTML/Options_Tab.htm#ticket-options">
-Using the Option Panel </a></li>
-<li>Click the Destroy Ticket button. </li>
-</ol>
-<h3>Destroy importable or protected tickets</h3>
-<p>
-Importable and protected tickets are not controlled by MIT Kerberos so
-you cannot use MIT Kerberos to destroy them. They are destroyed when
-you log out of your Windows session.</p>
-<p>
-<a href="#top">Back to Top</a> </p>
+
+
+
 <h2><a name="destroy-automatically">Destroy tickets
-automatically</a></h2>
+automatically on exit</a></h2>
 <p>
 To automatically destroy your tickets when you exit MIT Kerberos:</p>
 <ol>
 <li>Open the Options tab. </li>
-<li>Find the Destroy Tickets on Exit checkbox in the Ticket
-Options
-panel. If it is not already selected, click it to turn the option on. </li>
+<li>Find the Ticket Options panel. </li>
+<li>If the Destroy Tickets on Exit checkbox is not already selected, click to select it. </li>
 </ol>
 <p>
 Your tickets are not affected immediately, but they will be
 automatically destroyed as soon as you exit MIT Kerberos. </p>
-<p>
-<b>Note: </b> Tickets that were obtained when you logged
-on to a
-Windows domain though a Windows Logon session are not affected by the
-Destroy Tickets on Exit option. They are destroyed when you exit your
-Windows Logon session. 
-</p>
+
 <p><a href="#top">Back to Top</a> </p>
 <h2>Related help</h2>
 <ul id="helpul">
-<li><a href="HTML/Import_Status.htm"> Import
-Status meanings</a></li>
 <li><a href="HTML/View_Tickets.htm">View tickets </a></li>
 <li><a href="HTML/Tickets.htm">About tickets</a></li>
 <li><a href="HTML/Get_Tickets.htm">Get tickets</a></li>
