--- a/src/windows/leash/htmlhelp/html/FAQ.htm
+++ b/src/windows/leash/htmlhelp/html/FAQ.htm
@@ -23,14 +23,9 @@
 
 <h3> <a name="get-tickets">How do I get tickets?</a> </h3>
 
-<p>Click the Get Ticket  button and enter your principal (your Kerberos identity) and password to obtain a ticket.  <a href="HTML/Get_Tickets.htm">Click for details</a>
-</p><p> If you have logged on to a Windows domain through a Windows
-Logon session, you already have a Kerberos ticket. This ticket is
-marked in the main window with an Import Status of "imported,"
-"importable," or "protected."
-<br>
-<a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a>
+<p>Click the Get Ticket  button in the Home tab. In the Get Ticket window, enter your principal (your Kerberos identity) and password and click Okay.  <a href="HTML/Get_Tickets.htm">How to: Get Tickets</a>
 </p>
+
 <p>
 <a href="#top">Back to top</a></p>
 
@@ -38,13 +33,15 @@ marked in the main window with an Import Status of "imported,"
 <p>Yes. A pop up window warns you 15, 10, and 5 minutes before your
 ticket expires. If you would also like an audible alarm at these
 intervals, go to the Options tab and select Expiration Alarm in the
-Ticket Options panel. <a href="HTML/Options_Tab.htm#using-ticket-options">Using the Ticket Options panel</a> </p>
+Ticket Options panel. 
+<br> <a href="HTML/Options_Tab.htm#using-ticket-options">How to: Use Ticket Options Panel</a> </p>
 <p>
 <a href="#top">Back to top</a></p>
 
 <h3><a name="automatic-destroy">Are my tickets destroyed automatically when I exit MIT Kerberos?</a></h3>
 <p>
-Only if Destroy Tickets on Exit is selected in the Ticket Options panel in the Options tab. <a href="HTML/Options_Tab.htm#using-ticket-options">Using the Ticket Options panel</a> </p>
+Only if Destroy Tickets on Exit is selected in Ticket Options panel in the Options tab. <br> 
+<a href="HTML/Options_Tab.htm#using-ticket-options">How to: Use Ticket Options Panel</a> </p>
 <p>
 <a href="#top">Back to top</a></p>
 
@@ -53,7 +50,8 @@ Only if Destroy Tickets on Exit is selected in the Ticket Options panel in the O
 Renewable tickets add convenience, especially if you turn on the option
 to automatically renew them. They allow you to run a batch job without
 interruption and to work through a long session without continually
-reentering your password. <a href="HTML/Tickets.htm#renewable">About renewable tickets</a> </p>
+reentering your password. <br> 
+<a href="HTML/Tickets.htm#renewable">About: Renewable Tickets</a> </p>
 <p>
 <a href="#top">Back to top</a></p>
  
@@ -76,7 +74,8 @@ installation.</p>
 <p>
 If your company uses RSA SecurID to control access to Kerberos, you
 will be prompted to enter your SecurID password after you request a
-ticket. <a href="HTML/Get_Tickets.htm">Get Ticket help</a> </p>
+ticket. <br> 
+<a href="HTML/Get_Tickets.htm">How to: Get Tickets</a> </p>
 <p>
 <a href="#top">Back to top</a></p>
 
