--- a/src/windows/leash/htmlhelp/html/Options_Tab.htm
+++ b/src/windows/leash/htmlhelp/html/Options_Tab.htm
@@ -34,79 +34,74 @@ Scroll down to browse information about both panels, or jump to a section by cli
 <h2> <a name="using-view-options">Using the View Options Panel</a></h2>
 <p>
 Click the Options tab at the top of the ribbon menu and look to the
-left to find the View Options panel. The View Options are a list of all
-of the ticket information columns that can be displayed in the main
-window.</p>
+left to find the View Options panel. View Options control which ticket information columns are  displayed in the main window.</p>
 <p>
 Select a checkbox to show the information column in the main window.
 Deselect it to hide the column. Some options are selected by default.
 For example, "Valid Until" is selected by default, so the main window
 shows the Valid Until column showing when your tickets will expire. <br>
-<a href="HTML/View_Tickets.htm">View Tickets help</a> </p>
+<a href="HTML/View_Tickets.htm">How to: View Tickets </a> </p>
 
 <h2><a name="#view-options">View Options </a></h2>
 
 <table>
 <tbody><tr>
 <th>
-Checkbox Name </th>
+Checkbox </th>
 <th>
-Select this checkbox to...</th>
-<th>
-Details</th>
+Select to...</th>
+
 </tr>
 <tr>
-<th id="th2"><a name="issued">Issued  </a></th>
+ <tr><th id="th2">
+<table id="table-inner"><tr id="table-inner"><td id="table-inner">
+<img src="Images/checkbox.PNG" alt="checkbox image"   width="20" height="20" /> </td> <td id="table-inner"><a name="issued">Issued  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </a></td> </th> </tr>
+</table> 
 <td> See the date and time your ticket was originally obtained. </td>
-<td>If the ticket is imported, this is the time it was originally
-obtained when you logged on to a Windows domain with a Windows Logon
-session.</td> </tr>
-<tr> 
-<th id="th2">
- Renewable Until</th>
-<td>See the date and time that your renewable tickets cannot be renewed
-any more. After this time you must get a new ticket to access services
-authenticated by Kerberos.</td>
-<td>
- <a name="renewable-until">If this column shows <em>Not Renewable</em>, the ticket was not flagged as renewable when you obtained it.</a> 
-
-<b>Related Help:</b><ul id="helpul">
-<li> <a href="HTML/Tickets.htm#renewable"> About renewable tickets</a> </li>
-<li><a href="HTML/Renew_Tickets.htm"> Renew tickets</a></li>
-<li><a href="HTML/Ticket_Settings.htm"> Ticket settings and flags</a></li>
+ </tr>
+<tr><th id="th2">
+<table id="table-inner"><tr id="table-inner"><td id="table-inner">
+<img src="Images/checkbox.PNG" alt="checkbox image"   width="20" height="20" /> </td> <td id="table-inner">Renewable Until </td> </th> </tr>
+</table> 
+<td><a name="renewable-until">See the date and time that your renewable tickets expire completely and cannot be renewed. </a> After this time you must get new tickets to access services authenticated by Kerberos.
+<p></p>
+ If this column shows <em>Not Renewable</em>, the ticket was not flagged as renewable when you obtained it. 
+<p></p>
+<b>Related Help:</b>
+<ul id="helpul">
+<li> <a href="HTML/Tickets.htm#renewable"> About: Renewable Tickets</a> </li>
+<li><a href="HTML/Renew_Tickets.htm"> How to: Renew Tickets</a></li>
+<li><a href="HTML/Ticket_Settings.htm"> About: Ticket Settings and Flags</a></li>
 </ul>
 </td></tr>
-<tr>
-<th id="th2"> Valid Until  </th>
-<td>
-See when your ticket will expire. Note that you cannot renew a ticket if you let it expire. </td>
-<td>
- <a name="valid-until">Kerberos alerts you to expiring tickets with a warning in a pop up window. </a>
-To add an audible warning, select the Expiration Alarm checkbox in the Ticket Options panel. <br><a href="#using-ticket-options">Using the Ticket Options Panel</a>
+<tr><th id="th2"> 
+<table id="table-inner"><tr id="table-inner"><td id="table-inner">
+<img src="Images/checkbox.PNG" alt="checkbox image"   width="20" height="20" /> </td> <td id="table-inner">Valid Until </td> </th> </tr>
+</table> 
+<td> <a name="valid-until">
+See when your ticket will expire. </a>Note that you cannot renew a ticket if you let it expire. 
+<p></p>
+Kerberos alerts you to expiring tickets with a warning in a pop up window. 
+To add an audible warning, select the Expiration Alarm checkbox in the Ticket Options panel. <br><a href="#using-ticket-options">How to: Use Ticket Options Panel</a>
  </td></tr>
+ <tr><th id="th2"> 
+<table id="table-inner"><tr id="table-inner"><td id="table-inner">
+<img src="Images/checkbox.PNG" alt="checkbox image"   width="20" height="20" /> </td> <td id="table-inner">Encryption Type </td> </th> </tr>
+</table> 
+<td><a name="encryption-type">See the encryption type used to encrypt each session key and ticket. </a> This can be useful when troubleshooting.
+<p></p>
+ Kerberos supports multiple  types of encryption. The type used for a particular  ticket or session key is automatically negotiated when you request a ticket or a service. <br>
+<a href="HTML/Encryption_Types.htm#supported-types">About: Encryption Types</a> </td></tr>
 <tr>
-<th id="th2">  Encryption Type  </th>
-<td>See the encryption type used to encrypt each session key and ticket. This can be useful when troubleshooting.</td>
-<td> <a name="encryption-type">Kerberos supports multiple  types of encryption.</a> The type used for a particular  ticket or session key is automatically negotiated when you request a ticket or a service. <br>
-<a href="HTML/Encryption_Types.htm#supported-types">More About Encryption Types</a> </td></tr>
-<tr>
-<th id="th2"> Flags</th> 
-<td>See how the tickets were flagged (renewable and/or fowardable) when you obtained them. 
-</td><td> <a name="flags"> You cannot change how an existing flag is set. If you need a ticket with different flags, you must get a new ticket. <br></a> 
-<a href="HTML/Ticket_Settings.htm">About ticket settings and flags </a>
+<tr><th id="th2">
+<table id="table-inner"><tr id="table-inner"><td id="table-inner">
+<img src="Images/checkbox.PNG" alt="checkbox image"   width="20" height="20" /> </td> <td id="table-inner">Flags   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td> </th> </tr>
+</table> 
+<td> <a name="flags">See how the tickets were flagged (renewable and/or fowardable) when you obtained them. </a> 
+<p></p>
+ You cannot change the flags on existing tickets. If you need a ticket with different flags, you must get a new ticket. <br> 
+<a href="HTML/Ticket_Settings.htm">About: Ticket Settings and Flags </a>
 </td>
-</tr>
-<tr><th id="th2"> Import Status <p></p>Note: this option is not always available.</th> 
-<td> See which of your tickets have been imported (or can be imported),
-from a Windows Logon session, and which have been exported (or can be
-exported) into a Windows Logon session. <p></p>
-<b>Note: </b>This column is only available when you have obtained Kerberos
-tickets for a Windows domain by logging into a Windows Logon session. <p></p>
-<a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a>
-</td>
-<td><a name="import-status">The import status tells you what  application was used to obtain the ticket, and what application can fully use it now.</a>  Tickets originally obtained by starting  a Windows Logon session in a domain are <em> imported</em> or <em>importable</em> to MIT Kerberos, or they are <em>protected</em> from being imported. <p></p> Tickets obtained with the Get Ticket window are either <em>exportable</em> or <em>exported</em> to the Windows Logon session. <a href="HTML/Import_Status.htm">Import Status meanings</a>
- </td>
-
 </tr>
 </tbody></table>
 <p>
@@ -116,7 +111,7 @@ tickets for a Windows domain by logging into a Windows Logon session. <p></p>
 <h2> <a name="using-ticket-options">Using the Ticket Options Panel</a></h2>
 <p>
 Click the Options tab at the top of the ribbon menu and look to the
-right to find the Ticket Options panel. The Ticket Options control MIT
+right to find the Ticket Options panel. Ticket Options control MIT
 Kerberos's automatic features.</p>
 <p>
 Select a Ticket Option checkbox to turn that feature on. Deselect it to turn the feature off. </p>
@@ -125,59 +120,53 @@ Select a Ticket Option checkbox to turn that feature on. Deselect it to turn the
 <table>
 <tbody><tr>
 <th>
-Option</th>
+Checkbox</th>
 <th>
-Turn this on to...</th>
-<th>
-Details</th>
+Select to...</th>
 </tr>
-<tr>
-<th id="th2">Automatic Ticket Renewal</th>
+<tr><th id="th2">
+<table id="table-inner"><tr id="table-inner"><td id="table-inner">
+ <img src="Images/checkbox.PNG" alt="checkbox image"   width="20" height="20" /> </td> <td id="table-inner">Automatic Ticket Renewal </td> </th> </tr>
+</table>
 <td>
-Automatically renew tickets flagged as renewable, without promptings or
-requiring a password, until the renewal lifetime is reached. </td>
-<td>
-<a name="automatic-renewal">Renewing your tickets allows you to run
+<a name="automatic-renewal">Automatically renew tickets flagged as renewable, without promptings or requiring a password, until the renewal lifetime is reached. </a>
+<p></p>
+ Renewing your tickets allows you to run
 batch jobs without interruption and to work through a long session
 without continually reentering your
-password. </a> <a href="HTML/Tickets.htm#renewable">About renewable tickets</a>
+password.  <br>
+ <a href="HTML/Tickets.htm#renewable">About: Renewable Tickets</a>
 <p></p>
 <b>Note: </b>Automatic ticket renewal will not work if you exit MIT Kerberos or if your machine is in hibernation mode. 
  </td></tr>
-<tr>
-<th id="th2">Automatic Ticket Import </th>
-<td>
-Automatically import tickets you have already obtained for a Windows domain through a Windows Logon session. </td>
-<td>
-<a name="automatic-import">Importing your Windows domain tickets allows
-them to be fully used by applications that require the MIT Kerberos
-interface. Imported tickets are marked as <em>imported</em> in the Import Status column, and cannot be destroyed with the Destroy Ticket button. </a> <a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a>
+
+<tr><th id="th2">
+<table id="table-inner"><tr id="table-inner"><td id="table-inner">
+<img src="Images/checkbox.PNG" alt="checkbox image"   width="20" height="20" /> </td> <td id="table-inner">Expiration Alarm</td> </th> </tr>
+</table>
+<td><a name="expiration-alarm">Have MIT Kerberos provide an audible alarm 15, 10, and 5 minutes before your tickets expire.</a> 
 <p></p>
-<b>Note: </b>When tickets are imported, any tickets you already have in MIT Kerberos are destroyed. 
- </td></tr>
-<tr>
-<th id="th2">Expiration Alarm</th>
-<td>Have Kerberos provide an audible alarm 15, 10, and 5 minutes before your tickets expire.</td>
-<td><a name="expiration-alarm">Regardless of whether this option is on, Kerberos alerts you to expiring tickets at the same intervals with pop up window. </a>However, the pop up
-window will not always be visible on a busy desktop.  <a href="HTML/Tickets.htm#expiration">About ticket expiration</a></td></tr>
-<tr>
-<th id="th2">Destroy Tickets on Exit </th>
+ Regardless of whether this option is on, MIT Kerberos alerts you to expiring tickets at the same intervals with pop up window. However, the pop up
+window will not always be visible on a busy desktop. <br>
+ <a href="HTML/Tickets.htm#expiration">About: Ticket Expiration</a></td></tr>
+ <tr><th id="th2"> 
+<table id="table-inner"><tr id="table-inner"><td id="table-inner">
+<img src="Images/checkbox.PNG" alt="checkbox image"   width="20" height="20" /> </td> <td id="table-inner"> Destroy Tickets on Exit  </td> </th> </tr>
+</table>
 <td> <a name="destroy-tickets">Have MIT Kerberos destroy your tickets when you exit the program. </a>
 <p></p>
-<b>Note: </b>MIT Kerberos cannot permanently destroy tickets you've
-obtained by logging into a Windows domain, even if you've imported
-them. Those tickets are destroyed when you log out of the domain.</td>
-<td>Turning this option on provides greater security. However, you will
-need to turn this off if you want to exit MIT Kerberos but leave
+Turning this option on provides greater security. However, you will
+need to turn this off if you want to exit MIT Kerberos while leaving
 processes running which require your valid tickets. </td></tr>
 
 
-<tr>
-<th id="th2">
-Allow Mixed Case Realm Name</th>
-<td>Use a Kerberos realm with lower case letters in its name.</td>
-<td>
-<a name="mixed-case-realm">Kerberos <em>realms</em> are a way of logically grouping resources and identities that use Kerberos. </a>
+<tr><th id="th2">
+<table id="table-inner"><tr id="table-inner"><td id="table-inner">
+<img src="Images/checkbox.PNG" alt="checkbox image"   width="20" height="20" /> </td> <td id="table-inner">Allow Mixed Case Realm Name</td> </th> </tr>
+</table>
+<td><a name="mixed-case-realm"> Use a Kerberos realm with lower case letters in its name.</a>
+<p></p>
+Kerberos <em>realms</em> are a way of logically grouping resources and identities that use Kerberos. 
 By convention, realm names use all upper case letters. This helps
 distinguish a realm from the DNS domain it corresponds to. Realm names
 are case sensitive. So for convenience, anything you enter in the realm
