--- a/src/windows/leash/htmlhelp/html/Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Tickets.htm
@@ -14,20 +14,15 @@ and password to obtain a ticket. The ticket allows you to securely
 access all of the computers and services set up to authenticate you
 through Kerberos, until the ticket expires, without requiring you to
 enter your password again. </p>
-<p> If you have logged on to a Windows domain, you already have a
-Kerberos ticket. This ticket is marked in the main window with an
-Import Status of <em>imported,</em> <em>importable,</em> or <em>protected.</em>
 
-</p>
 <table>
 <tbody><tr><th>On this page</th><th>On other pages</th></tr>
 <tr>
 <td><b>Learn about...</b>
 <ul id="helpul">
-<li><a href="#expiration"> Ticket Expiration </a></li>
-<li><a href="#renewable"> Renewable Tickets</a></li>
-<li><a href="#forwardable"> Forwardable Tickets </a></li>
-<li><a href="#importable"> Importable (Windows domain) Tickets </a></li>
+<li><a href="#expiration"> Ticket expiration </a></li>
+<li><a href="#renewable"> Renewable tickets</a></li>
+<li><a href="#forwardable"> Forwardable tickets </a></li>
 </ul>
 </td>
 <td>
@@ -38,8 +33,6 @@ Import Status of <em>imported,</em> <em>importable,</em> or <em>protected.</em>
 <li><a href="HTML/View_Tickets.htm">View tickets</a></li>
 <li><a href="HTML/Ticket_Settings.htm">Work with ticket settings and flags</a>
 </li><li><a href="HTML/Destroy_Tickets.htm">Destroy tickets</a></li>
-<li><a href="HTML/Export_Tickets.htm">Export tickets</a></li>
-<li><a href="HTML/Import_Tickets.htm">Import tickets</a></li>
 </ul>
 </td>
 </tr>
@@ -59,11 +52,11 @@ Expiration Alarm in the Ticket Options panel.</td></tr>
 <tr>
 <td>When you get your ticket, click Show Advanced to view and adjust
 the ticket's lifetime. Note that some Kerberos installations will not
-allow you to adjust the ticket lifetime. <br> <a href="HTML/Get_Tickets.htm">Get Tickets help</a></td>
+allow you to adjust the ticket lifetime. <br> <a href="HTML/Get_Tickets.htm">How to: Get Tickets </a></td>
 <td>The main window includes a <b>Valid Until</b> column for each of
 your tickets. After the time listed in this column, the ticket will
 expire and you must get a new ticket to access network resources that
-use Kerberos. <br> <a href="HTML/View_Tickets.htm">View Tickets help</a></td>
+use Kerberos. <br> <a href="HTML/View_Tickets.htm">How to: View Tickets </a></td>
 </tr>
 </tbody></table>
 <p>
@@ -86,18 +79,18 @@ reached. Then you must obtain a new ticket. </td></tr>
 <td>When you get your ticket, click Show Advanced and then select
 Renewable under "Flag this ticket as." Use the Renewable Until slider
 to adjust the ticket's renewable lifetime. <br> 
-<a href="HTML/Get_Tickets.htm">Get Tickets help</a></td>
+<a href="HTML/Get_Tickets.htm">How to: Get Tickets </a></td>
 </tr>
 <tr> <th id="th2">Renew Once</th>  
 <td> Click the Renew button. Note that you cannot renew expired tickets even if the ticket is still within its renewable lifespan.  <br> 
- <a href="HTML/Renew_Tickets.htm#renew-once">Renew Ticket Once help</a></td></tr>
+ <a href="HTML/Renew_Tickets.htm#renew-once">How to: Renew Ticket Once </a></td></tr>
 <tr><th id="th2">Renew Automatically</th>
 <td>Go to the Options tab and select Automatic Ticket Renewal in the
 Ticket Options panel. Note that MIT Kerberos must be active and running
 in order to renew tickets. This means that if your machine is in
 hibernation mode or if MIT Kerberos is not running when it is time to
 renew your tickets, your tickets will not be renewed. <br> 
-<a href="HTML/Renew_Tickets.htm#renew-once">Renew Tickets Automatically help</a> </td>
+<a href="HTML/Renew_Tickets.htm#renew-once">How to: Renew Tickets Automatically </a> </td>
 </tr><tr>
 <th id="th2">View </th>
 <td>
@@ -109,7 +102,7 @@ no longer be renewed, go to the Options tab and select the Renewable
 Until checkbox in the View Options panel. To see which of your tickets
 are renewable, select Flags.
 <br>
- <a href="HTML/View_Tickets.htm">View Tickets help</a> </td>
+ <a href="HTML/View_Tickets.htm">How to: View Tickets </a> </td>
 </tr>
 </tbody></table>
 <p>
@@ -125,64 +118,19 @@ need to get new tickets to use remote services.</td></tr>
 <tr> <th id="th2">Obtain Forwardable Tickets</th><th id="th2"> View</th></tr>
 <tr>
 <td>When you get your ticket, click Show Advanced and  then select Forwardable and Proxiable under "Flag this ticket as."   <br> 
-<a href="HTML/Get_Tickets.htm">Get Ticket help</a></td>
+<a href="HTML/Get_Tickets.htm">How to: Get Tickets </a></td>
 <td> In the Options tab, the View Options panel checkboxes control what
 information is displayed for your tickets. Select the Flags checkbox to
-open a column indicating which of your tickets are forwardable. <br> <a href="HTML/View_Tickets.htm">View Tickets help</a> </td>
+open a column indicating which of your tickets are forwardable. <br> <a href="HTML/View_Tickets.htm">How to: View Tickets </a> </td>
 </tr>
 </tbody></table>
 <p>
 <a href="#top">Back to Top</a> </p>
-<p></p>
-<table>
-<tbody><tr><th colspan="2"><a name="importable">Importable (Windows domain) Tickets </a> </th></tr>
-<tr><td colspan="2">Most Windows operating systems use the Kerberos
-protocol behind the scenes to authenticate you when you log on to a
-Windows domain with a Windows Logon session. This means that if you
-have logged on to a Windows domain (not just to your computer), Windows
-probably issued you a Kerberos ticket. <p></p>
-Some applications that use Kerberos accept tickets issued through a
-Windows Logon session. Others need to use the MIT Kerberos interface.
-In most installations, MIT Kerberos will attempt to automatically
-import any tickets already issued to you. Imported tickets can take
-full advantage of the MIT Kerberos interface. <p></p>
-Windows domain tickets obtained through your Windows Logon session are
-automatically renewed until you exit your Windows Logon session. </td>
-</tr><tr> <th id="th2">Import Status</th>
-<td>If you have tickets obtained through a Windows Logon session, the
-main window of MIT Kerberos shows the Import Status for all of your
-tickets. You can hide or show this column with the View Options panel
-checkboxes in the Options tab. Tickets originally obtained through a
-Windows Logon session are <em> imported</em> or <em>importable</em> to MIT Kerberos, or they are <em>protected</em> from being imported. <br> 
-<a href="HTML/Import_Status.htm">Import Status meanings</a></td>
-</tr>
-<tr> <th id="th2">Import/Don't Import Tickets</th>
-<td>You can turn the Automatic Import option on or off by clicking the
-Automatic Import Tickets checkbox in the Ticket Options panel in the Options
-tab. You can also import tickets directly by clicking the Import
-Tickets button in the Home tab. <br> 
-<a href="HTML/Import_Tickets.htm">Import Tickets help</a></td>
-</tr>
-<tr> <th id="th2">Renew Imported Tickets</th>  
-<td> If the Automatic Import option is selected, you do not need to
-renew your imported tickets as they will automatically be renewed
-through your Windows Logon session and re-imported into MIT Kerberos. </td></tr>
-<tr><th id="th2">Destroy Imported Tickets</th>
-<td>If the Automatic Import option is selected, you cannot directly
-destroy imported tickets. They are destroyed when you exit your Windows
-Logon session. <br> 
-<a href="HTML/Destroy_Tickets.htm#imported">Destroy Tickets help</a> </td>
-</tr>
-</tbody></table>
-<p>
-<a href="#top">Back to Top</a> </p>
-
- <p></p>
 
 
 <script language="JavaScript"> 
 popfont="Arial,.825,," 
-popupTicket="A Kerberos ticket is actually an encrypted block of data that includes authentication for the user and an expiration time." 
+popupTicket="A Kerberos ticket is an encrypted block of data that includes authentication for the user and an expiration time." 
 
 </script> 
 
