--- a/src/windows/leash/htmlhelp/html/Troubleshooting.htm
+++ b/src/windows/leash/htmlhelp/html/Troubleshooting.htm
@@ -12,7 +12,7 @@
 
 <li> <a href="#ticket-lifetime">  Why doesn't my ticket lifetime match the lifetime I selected with the slider in the Get Ticket window?  </a></li> 
 
-<li><a href="#Windows-session">   My Windows Logon session uses Kerberos. I'm having trouble importing those tickets.   </a></li> 
+
 
 <li> <a href="#set-preferences">  How do I set properties like the default ticket lifetime?  </a></li> 
 <li> <a href="#set-preferences"> I have multiple principals and have
@@ -26,7 +26,7 @@ Kerberos doesn't work. What's going on? </a></li>
 The ticket cannot be renewed. This could be because the ticket was not
 flagged as renewable when you obtained it, or because it expired before
 you could renew it, or because the ticket's renewable lifetime has been
-reached. <a href="HTML/Tickets.htm#renewable">About renewable tickets</a> </p>
+reached. <a href="HTML/Tickets.htm#renewable">About: Renewable Tickets</a> </p>
 <p>
 <a href="#top">Back to top</a></p>
 
@@ -51,22 +51,6 @@ a lifetime of only 5 hours.</p>
 <a href="#top">Back to top</a></p>
 
 
-<a name="Windows-session"> </a><h3><a name="Windows-session">   My Windows Logon session uses Kerberos. I'm having trouble importing those tickets.   </a></h3> 
-<p>
-Several conditions can cause difficulties importing tickets if you are
-using a Windows Vista operating system or earlier. If the ticket you
-want to import shows an Import Status of "protected," the problem can
-usually be solved by turning off the User Access Control (UAC) feature
-in Windows.</p>
-<p>
-Problems can also occur if you are using a computer with a 64 bit
-operating system but are running a 32 bit version of Windows Kerberos.
-Note that Windows Kerberos is <b>not</b> the same application as MIT Kerberos; it is the application that your Windows Logon session uses to issue Kerberos tickets.
-
- </p>
-<p>
-<a href="#top">Back to top</a></p>
-
 <h3> <a name="set-preferences"> How do I set properties like the default ticket lifetime?</a></h3>
 <p>
 You cannot use the MIT Kerberos program to set properties such as
@@ -87,7 +71,7 @@ applications make a generic request, Kerberos does not know which
 principal is being authenticated and checks the default principal for
 tickets. If the default principal is not the one being authenticated,
 the application will usually simply fail to work with no warning or
-notice. <a href="HTML/Make_Default.htm">How to: set your default principal</a>
+notice. <a href="HTML/Make_Default.htm">How to: Make Default Principal</a>
 
 
  </p>
