--- a/src/windows/leash/htmlhelp/html/Options_Tab.htm
+++ b/src/windows/leash/htmlhelp/html/Options_Tab.htm
@@ -6,6 +6,7 @@
 
 <body>
 <h1><a name="top">Using the Options Tab </a> </h1>
+<img src="Images/Options_Tab.PNG" alt="Home Tab "   width="585" height="116" />
 <p>
 Click the Options tab to reach the checkboxes that control ticket and
 view options. The Options tab has two panels. Use the View Options
