Help - remove principal drop-down refs
Signed-off-by: Kevin Wasserman <kevin.wasserman@painless-security.com>

--- a/src/windows/leash/htmlhelp/html/Getting_Started.htm
+++ b/src/windows/leash/htmlhelp/html/Getting_Started.htm
@@ -73,9 +73,8 @@ Browse the table below to see where to find the commands and options you need.
 <tr><th id="th2"> Destroy your MIT Kerberos tickets </th> <td>Click the Destroy Tickets button. <br>
  <a href="HTML/Destroy_Tickets.htm">How to: Destroy Tickets</a> </td></tr>
 <tr><th id="th2">Manage multiple principals </th> <td>
-When you get tickets for a principal, Kerberos offers to remember the
-principal for you. You can then select saved principals from a list
-when getting tickets or changing your password. <p></p>
+When you get tickets for a principal, MIT Kerberos offers to remember the
+principal for you. The next time you start to enter a saved principal, Kerberos will auto-complete it for you. <p></p>
 In the main window, click a principal to select it. The Renew Ticket,
 Change Password, and Make Default buttons then apply to the selected
 principal.<br>
