--- a/src/windows/leash/htmlhelp/html/Renew_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Renew_Tickets.htm
@@ -91,7 +91,7 @@ repeatedly until the date and time in this column is reached. </p>
 <a href="#top">Back to Top</a> </p>
 <a name="related-help"><p></p></a>
 <h2>Related help</h2>
-<ul>
+<ul id="helpul">
 <li><a href="HTML/Tickets.htm#renewable">About renewable  tickets</a></li>
 <li><a href="HTML/Ticket_Settings.htm">Ticket settings and flags</a></li>
 <li><a href="HTML/Get_Tickets.htm">Get  tickets</a></li>
