--- a/src/windows/leash/htmlhelp/html/Change_Password.htm
+++ b/src/windows/leash/htmlhelp/html/Change_Password.htm
@@ -15,11 +15,11 @@ To change your password:</p>
 <li> Create or choose a strong new password. It's best to start with a phrase instead of a word. <br>
  <a href="HTML/Password_Tips.htm">About: Password Tips and Examples</a></li>
 
-<li>If you have multiple <a href="JavaScript:popup.TextPopup(popupPrincipal, popfont,9,9,-1,-1)">principals</a>, you can select the principal you want to manage by clicking it in the main window. Or you can wait to choose your principal in the Change Password window. </li>
+<li>If you have multiple <a href="JavaScript:popup.TextPopup(popupPrincipal, popfont,9,9,-1,-1)">principals</a>, you can select the principal you want to manage by clicking it in the main window. Or you can wait and  enter your principal in the Change Password window. </li>
 
 <li>Click the Change Password button in the ribbon menu at the of the main window.</li>
 
-<li> Verify your principal (your Kerberos identity) or select a different one with the pull down arrow.  </li>
+<li> Verify your principal (your Kerberos identity) or enter a different one.  </li>
 
 <li>Enter your current password.</li>
 
